# slic-reveng

./: .pypirc  01.installation.md  02.reveng-data.md  03.interpolate.md  Gemfile  LICENSE.md  README.md  _config.yml  aim_1.md  aim_2.md  aim_3.md  forty_jekyll_theme.gemspec  index.html  index.md  setup.py
.github/workflows/: gh-pages.yml
_includes/: footer.html  head.html  header.html  tiles.html
_layouts/: 01.installation.html  03.interpolate.html  aim_2.html  home.html
_sass/base/: _typography.scss
_sass/components/: _button.scss  _section.scss  _tiles.scss
_sass/layout/: _banner.scss  _header.scss
_sass/libs/: _vars.scss
_site/: 01.installation.html  02.reveng-data.html  03.interpolate.html  404.html  aim_1.html  aim_2.html  aim_3.html  index.html  pyproject.toml
_site/assets/css/: main.css  main.css.map
_site/slic_reveng.egg-info/: PKG-INFO  SOURCES.txt
docs/_pages/: home.md
slic-reveng/: 01.sumstats-to-indiv-parcels.py  __init__.py  brainstat_analysis.py  simulate.py
slic-reveng/scripts/: run_simulation.py
slic_reveng.egg-info/: top_level.txt
